# oop_lab4

./: CMakeLists.txt  README.md  main.cpp
include/: concepts.hpp  figure.hpp  figure.ipp  rectangle.hpp  rectangle.ipp  square.hpp  square.ipp  trapeze.hpp  trapeze.ipp  vector.hpp  vector.ipp
tests/: unit_test.cpp
